courses/430_programming-languages/assignment-6/tests/error/hw5_error11b.correct
cannot return value of type '(int -> int)' from function declared with type 'bool'
